--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
                             data-aos-delay="300">
                             <div class="col-md-6">
                                 <h5>Flutter Developer</h5>
-                                <small class="text-info">CleverFlow (Intern 2020)</small>
+                                <small class="text-info">Mikhazi Pvt Ltd (2022)</small>
                             </div>
                             <div class="col-md-6">
-                                <p class="mb-4">Cross Platform mobile App frontend development and penetration testing using various tools</p>
+                                <p class="mb-4">Cross Platform mobile App development and testing using various tools</p>
                             </div>
                         </div>
 
