--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg py-4 fixed-top navbar-light bg-body">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="https://haider-patanwala.github.io/Portflio-HP/">
                 <h4 class="fw-bold">Haider Patanwala</h4>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
@@ -311,7 +311,7 @@
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md-6">
-                    <p class="mb-0"><a href="/">Haider Patanwala - Portfolio </a></p>
+                    <p class="mb-0"><a href="https://haider-patanwala.github.io/Portflio-HP/">Haider Patanwala - Portfolio </a></p>
                 </div>
                 <div class="col-auto text-end">
                     <a href="https://twitter.com/HaiderPatan" class="btn btn-outline-info ms-2 btn-icon"><i class="ri-twitter-fill"></i></a>
