--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg py-4 fixed-top navbar-light bg-body">
         <div class="container">
-            <a class="navbar-brand" href="https://haider-patanwala.github.io/Portflio-HP/">
+            <a class="navbar-brand" href="https://haider-patanwala.github.io/Portflio-HP">
                 <h4 class="fw-bold">Haider Patanwala</h4>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
