--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="row g-md-5 g-4">
                 <div class="col-lg-6">
 
-                    <h3 class="mb-4">Education</h3>
+                    <h3 class="mb-4 d-lg-flex justify-content-center">Education</h3>
                     <div class="row gy-4">
 
                         <div class="row gx-0 gy-4 p-5 border-hover rounded-5 shadow" data-aos="fade-up"
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col-lg-6">
 
-                    <h3 class="mb-4">Experience</h3>
+                    <h3 class="mb-4 d-lg-flex justify-content-center">Experience</h3>
                     <div class="row gy-4">
 
                         <div class="row gx-0 gy-4 p-5 border-hover rounded-5 shadow" data-aos="fade-up"
