--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="/assets/images/hero.png?">
+    <link rel="icon" href="./Assets/images/hero.png?" type="image/x-icon">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
@@ -53,7 +53,7 @@
                         alt="">
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="fw-bold display-3" data-aos="fade-up">HAIDER PATANWALA<br /> <span class="text-info">WEB
+                    <h1 class="fw-bold display-3" data-aos="fade-up">Haider Patanwala<br /> <span class="text-info">WEB
                             DEVELOPER</span></h1>
                     <p data-aos="fade-up" data-aos-delay="200">I create modern eye catching websites, boosting your
                         digital presence</p>
@@ -107,7 +107,7 @@
 
     <!-- About -->
     <div id="about" class="section-padding divider">
-        <div class="container m-2">
+        <div class="container">
             <div class="row">
                 <div class="col-12" data-aos="fade-up">
                     <div class="intro-section text-center mb-5">
