--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
                 <div class="col-12" data-aos="fade-up">
                     <div class="intro-section text-center mb-5">
                         <h1 class="fw-bold">What I Do</h1>
-                        <p class="mx-auto">There are many variations of passages of Lorem Ipsum available but the
-                            majority have suffered alteration in some form by injected humour</p>
+                        <p class="mx-auto">Making websites that capture users.</p>
                     </div>
                 </div>
             </div>
