--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/hero.png?">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/images/hero.png?">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
